# MAKr

./: Cargo.toml
hug_ast/src/: lib.rs  parser.rs  scope.rs
hug_bin/src/: main.rs
hug_compiler/src/: lib.rs
hug_core/: Cargo.toml
hug_core/hug/: core.hug
hug_core/src/: lib.rs
hug_il/: Cargo.toml
hug_il/src/: lib.rs
hug_interpreter/: Cargo.toml
hug_interpreter/src/: lib.rs  stack.rs  vm.rs
hug_lexer/src/: lib.rs  parser.rs  tokenizer.rs
hug_lexer/tests/: tests.rs
hug_lib/: Cargo.toml
hug_lib/src/: ffi_helpers.rs  function.rs  ident_table.rs  lib.rs  module.rs  value.rs  variables.rs
test/: prog.hug
